--- a/templates/add_services_form.html
+++ b/templates/add_services_form.html
@@ -1,14 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
 <form method="post" action="{{url_for('logic_routes.add_services')}}">
-    <label for="meal_name">Provide service name:</label><br>
-    <input type="text" id="meal_name" name="meal_name" required><br>
-    <label for="guest_number">Provide guest number:</label><br>
-    <input type="number" id="guest_number" name="guest_number" required><br>
-    <label for="meal_price">Provide service price:</label><br>
-    <input type="number" id="meal_price" name="meal_price" step="0.01" required>
-    <button type="submit">Add!</button>
-    <br>
-    <a href="{{url_for('form_routes.dashboard_form')}}"><button type="button">Return</button></a>
+    <input type="text" id="meal_name" name="meal_name" placeholder="Provide meal name" required><br>
+    <input type="number" id="guest_number" name="guest_number" placeholder="Provide guest number" required><br>
+    <input type="number" id="meal_price" name="meal_price" step="0.01" placeholder="Provide meal price" required>
+    <button type="submit">
+        <i class="fa fa-plus" style="color: black;"></i>
+    </button>
 </form>
 {% endblock %}
