--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,46 +5,79 @@
     <title>Layout</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static', filename='custom.css')}}">
-    <style>
-        h1 {
-            text-align: center;
-        }
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            text-align: center;
-        }
-        .container {
-            text-align: center;
-        }
-        nav li {
-            display: inline;
-        }
-        nav a {
-            display: inline-block;
-            margin: 0 10px;
-        }
-    </style>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
-<h1>Bill Management System</h1>
-<nav>
-    <ul>
-        <li><a href="{{url_for('form_routes.dashboard_form')}}">Home</a></li>
-        <li><a href="{{url_for('form_routes.add_meal_form')}}">Add Meal</a></li>
-        <li><a href="{{url_for('form_routes.add_services_form')}}">Add Services</a></li>
-        <li><a href="{{url_for('form_routes.check_discount_form')}}">Check Discount</a></li>
-        <li><a href="{{url_for('form_routes.apply_discount_form')}}">Apply Discount</a></li>
-        <li><a href="{{url_for('logic_routes.sum_order')}}">Check Sum</a></li>
-        <li><a href="{{url_for('logic_routes.save', filename='bill.txt')}}">Print Bill</a></li>
-        <li><a href="{{ url_for('form_routes.preferences_form') }}">Preferences</a></li>
-        <li><a href="{{url_for('logic_routes.logout')}}">Logout</a></li>
-    </ul>
-</nav>
+<header class="logo-header">
+    <a href="{{url_for('logic_routes.index')}}"><img src="{{url_for('static', filename='logo.png')}}" alt="Bill Management System"></a>
+</header>
 <div class="container">
     {% block content %} {% endblock content %}
 </div>
+<nav>
+    <ul class="nav-grid">
+        <!-- First row of navigation items -->
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('form_routes.dashboard_form')}}">
+                <i class="fas fa-home nav-icon"></i>
+                <span class="nav-text">Home</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('form_routes.add_meal_form')}}">
+                <i class="fas fa-utensils nav-icon"></i>
+                <span class="nav-text">Add Meal</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('form_routes.add_services_form')}}">
+                <i class="fas fa-concierge-bell nav-icon"></i>
+                <span class="nav-text">Add Services</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('form_routes.check_discount_form')}}">
+                <i class="fas fa-percent nav-icon"></i>
+                <span class="nav-text">Check Discount</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('form_routes.apply_discount_form')}}">
+                <i class="fas fa-tags nav-icon"></i>
+                <span class="nav-text">Apply Discount</span>
+            </a>
+        </li>
+    </ul>
+    <ul class="nav-grid">
+        <!-- Second row of navigation items -->
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('logic_routes.sum_order')}}">
+                <i class="fas fa-calculator nav-icon"></i>
+                <span class="nav-text">Check Sum</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('logic_routes.save', filename='bill.txt')}}">
+                <i class="fas fa-print nav-icon"></i>
+                <span class="nav-text">Print Bill</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('form_routes.preferences_form') }}">
+                <i class="fas fa-cogs nav-icon"></i>
+                <span class="nav-text">Settings</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{url_for('logic_routes.logout')}}">
+                <i class="fas fa-sign-out-alt nav-icon"></i>
+                <span class="nav-text">Logout</span>
+            </a>
+        </li>
+        <!-- Placeholder for the fifth item if necessary -->
+        <li class="nav-item"></li>
+    </ul>
+</nav>
 </body>
 </html>
