--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,8 +65,14 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('form_routes.preferences_form') }}">
-                <i class="fas fa-cogs nav-icon"></i>
+                <i class="fas fa-bar-chart nav-icon"></i>
                 <span class="nav-text">Settings</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="fas fa-cogs nav-icon"></i>
+                <span class="nav-text">Make Prediction</span>
             </a>
         </li>
         <li class="nav-item">
