--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,7 +67,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{url_for('logic_routes.predictions')}}">
+            <a class="nav-link" href="#">
                 <i class="fas fa-cogs nav-icon"></i>
                 <span class="nav-text">Predictions</span>
             </a>
